# rust-rocket-webapp-boilerplate

./: .example.env  Cargo.toml  README.md  justfile
docs/: IMG_0720.HEIC  IMG_0721.HEIC  IMG_0722.HEIC  IMG_0723.HEIC  IMG_0725.HEIC  IMG_0726.HEIC
migrations/: 20220909060953_create_users.up.sql  20220910062628_create_permissions.up.sql  20220910203106_create_profiles.down.sql  20220910203106_create_profiles.up.sql  20220915023837_create_tenants.down.sql  20220915023837_create_tenants.up.sql
src/: events.rs  fairings.rs  main.rs
src/auth/: mod.rs  routes.rs  service.rs
src/permissions/: mod.rs  routes.rs  sqlite.rs  types.rs
src/permissions/domain/: events.rs  service.rs
src/profiles/: mod.rs  sqlite.rs  types.rs
src/profiles/domain/: events.rs  service.rs
src/tenants/: mod.rs  routes.rs  sqlite.rs  types.rs
src/tenants/domain/: events.rs
src/types/: mod.rs  sqlite.rs  uuid.rs  validation.rs
src/users/: mod.rs  routes.rs  sqlite.rs  types.rs
src/users/domain/: events.rs  service.rs
