[package]
name = "ffai"
version = "0.1.0"
edition = "2021"

[dependencies]
bus = "2.3.0"
chrono = { version = "0.4.22", features = ["serde"] }
color-eyre = "0.6.2"
dotenvy = "0.15.3"
lazy-regex = "2.3.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tap = "1.0.1"
thiserror = "1.0.34"
tokio = "1.21.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
